# llm-novelist

./: .env.example  .gitignore  README.md  pyproject.toml
src/llm_novelist/: __init__.py  __main__.py  chapter.py  llm.py  llm_novelist.py  llm_translator.py  text2image.py  utils.py  writing_styles.py
tests/: conftest.py  test_llm_author.py
